SocialMedia off on mobile. Change icon or background as correction later

--- a/src/components/Footer/page.module.css
+++ b/src/components/Footer/page.module.css
@@ -46,6 +46,10 @@
         margin-bottom: 5rem;
         scale: 1.2;
     }
+
+    #socialMedia{
+      display: none;
+    }
 }
 
 @media screen and (max-width:550px){
@@ -57,5 +61,9 @@
 
     .title{
         text-align: center;
+    }
+
+    #socialMedia{
+      display: none;
     }
   }
